--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.loopeer.lib:shadow:0.0.4-beta1'
 
+    // Glide image library
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
+
+
+
+
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
