--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,12 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.loopeer.lib:shadow:0.0.4-beta1'
-
-    // Glide image library
     compile 'com.google.android.gms:play-services-maps:11.8.0'
+
+
+    //
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 
 
