--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,23 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    //notification bandage
+    compile 'q.rorbin:badgeview:1.1.3'
+
+
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+
 
 
 
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
