--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-compat:26.1.0'
     testImplementation 'junit:junit:4.12'
     compile 'com.intuit.sdp:sdp-android:1.0.3'
     compile 'com.android.support:design:26.1.0'
@@ -30,7 +30,6 @@ dependencies {
     compile 'com.github.Guilherme-HRamos:Easy-Save:1.01'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.2.0'
-
     compile 'dev.dworks.libs:volleyplus:0.1.4'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.twitter.sdk.android:twitter:3.1.0'
@@ -39,26 +38,14 @@ dependencies {
     compile 'com.loopeer.lib:shadow:0.0.4-beta1'
     compile 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.makeramen:roundedimageview:2.3.0'
-
-
-
-    //
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
     //notification bandage
     compile 'q.rorbin:badgeview:1.1.3'
-
-
-
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
-
-
-
-
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
