--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.loopeer.lib:shadow:0.0.4-beta1'
-    compile 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation "com.google.android.gms:play-services-location:11.8.0"
+
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -46,6 +48,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
+
+//    compile 'com.github.f0ris.sweetalert:library:1.5.1'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
