--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -34,7 +35,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.twitter.sdk.android:twitter:3.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.loopeer.lib:shadow:0.0.4-beta1'
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation "com.google.android.gms:play-services-location:11.8.0"
@@ -44,12 +44,14 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //notification bandage
     compile 'q.rorbin:badgeview:1.1.3'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
 
-//    compile 'com.github.f0ris.sweetalert:library:1.5.1'
+    //route on map
+//    compile 'com.github.ar-android:DrawRouteMaps:1.0.0'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
