--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
 
     //route on map
 //    compile 'com.github.ar-android:DrawRouteMaps:1.0.0'
+    compile 'com.github.IsPra94:EasyToast:1.0.0'
+
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
