--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.picasso:picasso:2.5.2';
     //notification bandage
     compile 'q.rorbin:badgeview:1.1.3'
 
@@ -54,11 +54,16 @@ dependencies {
 //    compile 'com.github.ar-android:DrawRouteMaps:1.0.0'
     compile 'com.github.IsPra94:EasyToast:1.0.0'
     compile 'com.github.johnpersano:supertoasts:2.0'
+    //progress
+    compile 'com.wang.avi:library:2.1.3'
+    //bandage for cart
+    compile 'com.libRG:customtextview:1.1'
+
+
+
 
 
     compile 'com.github.aarsy.googlemapsanimations:googlemapsanimations:1.0.5'
-
-
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
