--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-//        mavenCentral()
+        mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
